Convert lab1 to disaggregated serving with all-bash workflow
- Convert from aggregated to disaggregated serving architecture
- Replace agg_router.yaml with disagg_router.yaml (separate prefill/decode workers)
- Fix invalid --worker-type flag causing pod crashes
- Convert all kubectl cells to bash (%%bash magic)
- Add wait loops for platform and deployment pods
- Add troubleshooting cell for pod diagnostics
- Implement markdown-first workflow (jupytext)
- Add .gitignore to exclude notebook outputs
- Add sync-notebooks.sh for md->ipynb conversion
- Update oneshot.sh to set NVIDIA Dynamo env vars
- Remove Python getpass cells, use bash read -sp instead
- Add NOTEBOOK-WORKFLOW.md and QUICK-REFERENCE.md docs
- Update to Dynamo 0.7.1 release

--- a/lab1/lab1-monitoring.ipynb
+++ b/lab1/lab1-monitoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36cb5004",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -51,12 +51,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "705062fe",
+   "cell_type": "markdown",
+   "id": "1",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "%%python\n",
     "import os\n",
     "\n",
@@ -69,21 +68,16 @@
     "if not os.environ.get('NAMESPACE'):\n",
     "    print(\"\\n⚠️  WARNING: NAMESPACE not set. Please run Lab 1 first.\")\n",
     "else:\n",
-    "    print(\"\\n✓ Environment ready for monitoring setup\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b18a7d92",
-   "metadata": {},
-   "source": [
-    "### Step 2: Add Prometheus Helm Repository"
+    "    print(\"\\n✓ Environment ready for monitoring setup\")\n",
+    "```\n",
+    "\n",
+    "### Step 2: Add Prometheus Helm Repository\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc37e723",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,18 +91,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e242318",
+   "id": "3",
    "metadata": {},
    "source": [
     "### Step 3: Install kube-prometheus-stack (Namespace-Scoped)\n",
     "\n",
-    "This installs Prometheus, Grafana, and the Prometheus Operator in your namespace:"
+    "This installs Prometheus, Grafana, and the Prometheus Operator in your namespace:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f848777",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,18 +125,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0983213f",
+   "id": "5",
    "metadata": {},
    "source": [
     "### Step 4: Wait for Monitoring Stack to Be Ready\n",
     "\n",
-    "Re-run the following cell until all monitoring pods are Running:"
+    "Re-run the following cell until all monitoring pods are Running:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83af7b09",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,16 +151,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6cd02ad",
+   "id": "7",
    "metadata": {},
    "source": [
-    "### Step 5: Verify Prometheus Operator"
+    "### Step 5: Verify Prometheus Operator\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7aa474",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d70deb7",
+   "id": "9",
    "metadata": {},
    "source": [
     "---\n",
@@ -202,13 +196,13 @@
     "\n",
     "### Step 1: Verify Dynamo Deployment Has Metrics Labels\n",
     "\n",
-    "The Dynamo operator automatically adds metrics labels to pods:"
+    "The Dynamo operator automatically adds metrics labels to pods:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207fa017",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,18 +217,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca2de1d3",
+   "id": "11",
    "metadata": {},
    "source": [
     "### Step 2: Check if PodMonitors Were Created\n",
     "\n",
-    "The Dynamo operator should automatically create PodMonitor resources:"
+    "The Dynamo operator should automatically create PodMonitor resources:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "188dd2f8",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,18 +243,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ed8eec",
+   "id": "13",
    "metadata": {},
    "source": [
     "### Step 3: Manually Test Metrics Endpoint\n",
     "\n",
-    "Let's verify metrics are accessible:"
+    "Let's verify metrics are accessible:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c53ac3",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,43 +275,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76f5b7b",
+   "id": "15",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
     "\n",
-    "Let's generate some traffic to populate metrics:"
+    "Let's generate some traffic to populate metrics:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9965d231",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash --bg\n",
     "# Ensure port-forward is running (in background)\n",
-    "kubectl port-forward deployment/vllm-agg-router-frontend 8000:8000 -n $NAMESPACE &\n",
+    "kubectl port-forward deployment/vllm-agg-router-frontend $USER_FRONTEND_PORT:8000 -n $NAMESPACE &\n",
     "sleep 5\n",
-    "echo \"✓ Port forward running on localhost:8000\""
+    "echo \"✓ Port forward running on localhost:${USER_FRONTEND_PORT}\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e44b0cd1",
+   "id": "17",
    "metadata": {},
    "source": [
     "Send test requests:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d745960a",
+   "cell_type": "markdown",
+   "id": "18",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "%%python\n",
     "!curl http://localhost:${USER_FRONTEND_PORT}/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
@@ -326,24 +319,18 @@
     "    \"messages\": [{\"role\": \"user\", \"content\": \"Hello! Tell me a short joke.\"}], \\\n",
     "    \"stream\": false,\\\n",
     "    \"max_tokens\": 50 \\\n",
-    "  }'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6487ded",
-   "metadata": {},
-   "source": [
+    "  }'\n",
+    "```\n",
+    "\n",
     "Run a few more requests:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "813bed4e",
+   "cell_type": "markdown",
+   "id": "19",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "%%python\n",
     "for i in range(5):\n",
     "    !curl -s http://localhost:${USER_FRONTEND_PORT}/v1/chat/completions \\\n",
@@ -351,14 +338,9 @@
     "      -d '{\"model\": \"Qwen/Qwen2.5-1.5B-Instruct\", \"messages\": [{\"role\": \"user\", \"content\": \"Tell me about AI\"}], \"stream\": false, \"max_tokens\": 30}' \\\n",
     "      > /dev/null\n",
     "\n",
-    "print(\"✓ Sent 5 test requests to generate metrics\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "896345bf",
-   "metadata": {},
-   "source": [
+    "print(\"✓ Sent 5 test requests to generate metrics\")\n",
+    "```\n",
+    "\n",
     "---\n",
     "\n",
     "## Section 3: Deploy Grafana Dashboard\n",
@@ -370,13 +352,13 @@
     "\n",
     "### Step 1: Download Dynamo Dashboard ConfigMap\n",
     "\n",
-    "First, let's get the dashboard configuration from the Dynamo repository:"
+    "First, let's get the dashboard configuration from the Dynamo repository:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ae4420c",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,16 +378,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558d51b6",
+   "id": "21",
    "metadata": {},
    "source": [
-    "### Step 2: Apply Dashboard ConfigMap to Your Namespace"
+    "### Step 2: Apply Dashboard ConfigMap to Your Namespace\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e824a266",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,16 +401,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cfebb7",
+   "id": "23",
    "metadata": {},
    "source": [
-    "### Step 3: Verify Dashboard ConfigMap"
+    "### Step 3: Verify Dashboard ConfigMap\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a4ab4d",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,18 +424,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3692ab77",
+   "id": "25",
    "metadata": {},
    "source": [
     "### Step 4: Restart Grafana to Load Dashboard\n",
     "\n",
-    "Grafana needs to be restarted to pick up the new dashboard:"
+    "Grafana needs to be restarted to pick up the new dashboard:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a42d563",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e1d20a",
+   "id": "27",
    "metadata": {},
    "source": [
     "---\n",
@@ -486,13 +468,13 @@
     "- Query metrics in Prometheus\n",
     "- View Dynamo dashboard in Grafana\n",
     "\n",
-    "### Step 1: Port Forward Prometheus"
+    "### Step 1: Port Forward Prometheus\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d07ba29a",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2404b26f",
+   "id": "29",
    "metadata": {},
    "source": [
     "### Step 2: Explore Prometheus Metrics\n",
@@ -536,13 +518,13 @@
     "   dynamo_frontend_inter_token_latency_seconds\n",
     "   ```\n",
     "\n",
-    "Let's test Prometheus is accessible:"
+    "Let's test Prometheus is accessible:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e01c653",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,16 +538,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a91a563a",
+   "id": "31",
    "metadata": {},
    "source": [
-    "### Step 3: Get Grafana Credentials"
+    "### Step 3: Get Grafana Credentials\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89c9e29e",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,16 +564,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8da91c6",
+   "id": "33",
    "metadata": {},
    "source": [
-    "### Step 4: Port Forward Grafana"
+    "### Step 4: Port Forward Grafana\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aafbeb7",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fbacf51",
+   "id": "35",
    "metadata": {},
    "source": [
     "### Step 5: Access Grafana Dashboard\n",
@@ -626,13 +608,13 @@
     "\n",
     "### Step 6: Generate More Load to See Metrics\n",
     "\n",
-    "Let's run a benchmark to generate interesting metrics:"
+    "Let's run a benchmark to generate interesting metrics:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bcdbcee",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b6cb49",
+   "id": "37",
    "metadata": {},
    "source": [
     "---\n",
@@ -684,13 +666,13 @@
     "\n",
     "### Exploring Metrics in Prometheus\n",
     "\n",
-    "Try these advanced queries in Prometheus:"
+    "Try these advanced queries in Prometheus:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5788cf",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31abc098",
+   "id": "39",
    "metadata": {},
    "source": [
     "---\n",
@@ -718,13 +700,13 @@
     "\n",
     "1. Run different concurrency levels with aiperf\n",
     "2. Observe how TTFT and ITL change in Grafana\n",
-    "3. Find the optimal concurrency for your deployment"
+    "3. Find the optimal concurrency for your deployment\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4986ba5",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75d0ebd9",
+   "id": "41",
    "metadata": {},
    "source": [
     "### Exercise 2: Create Custom Prometheus Queries\n",
@@ -806,13 +788,13 @@
     "        description: \"95th percentile TTFT is above 1 second\"\n",
     "```\n",
     "\n",
-    "Apply it:"
+    "Apply it:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0845f59",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,18 +806,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5321b5f9",
+   "id": "43",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Monitoring Stack\n",
     "\n",
-    "When you're done exploring, you can remove the monitoring stack:"
+    "When you're done exploring, you can remove the monitoring stack:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af9ec58",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "379cf673",
+   "id": "45",
    "metadata": {},
    "source": [
     "---\n",
@@ -883,13 +865,13 @@
     "\n",
     "## Troubleshooting\n",
     "\n",
-    "### Prometheus Not Scraping Metrics"
+    "### Prometheus Not Scraping Metrics\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a542e77",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,16 +887,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8765c3",
+   "id": "47",
    "metadata": {},
    "source": [
-    "### Grafana Dashboard Not Appearing"
+    "### Grafana Dashboard Not Appearing\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "563ca375",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,16 +910,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d280819",
+   "id": "49",
    "metadata": {},
    "source": [
-    "### Can't Access Grafana"
+    "### Can't Access Grafana\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ec334e",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,23 +934,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd20e018",
+   "id": "51",
    "metadata": {},
    "source": [
-    "### Port Forwards Not Working"
+    "### Port Forwards Not Working\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18973292",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Kill all existing port-forwards and restart\n",
     "pkill -f 'kubectl port-forward' || true\n",
-    "pkill -f 'microk8s.*port-forward' || true\n",
     "\n",
     "echo \"✓ Killed existing port-forwards\"\n",
     "echo \"\"\n",
@@ -977,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2886c21f",
+   "id": "53",
    "metadata": {},
    "source": [
     "---\n",
