Restructure as workshop repository with improved notebooks
Major changes:
- Rename notebooks to 01-dynamo-deployment-guide and 02-monitoring-and-observability
- Move notebooks to project root for better visibility
- Rename lab1/ to resources/ directory
- Update all path references from lab1/ to resources/
- Rewrite README to reflect workshop focus
- Update monitoring notebook for cluster-wide Grafana/Prometheus
- Add Dynamo inference dashboard with automated deployment
- Fix environment variable handling and cell execution issues
- Remove internal files (existing_users.yaml, artifacts/)
- Improve notebook structure with proper markdown/bash cells

The repository is now organized as interactive Jupyter workshops with
clear progression and better documentation.

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7fac2f6a",
+   "id": "00e57c6b",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbd1076",
+   "id": "4c03cdc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0801210b",
+   "id": "4dc6dea6",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f48063",
+   "id": "289513c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d06bbb1",
+   "id": "f130d071",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c82394",
+   "id": "7c576416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88bd204",
+   "id": "d5c796b3",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d1ac538",
+   "id": "c77da7f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5514f82",
+   "id": "3a889b72",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55f28d28",
+   "id": "05a18966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd656705",
+   "id": "9051713c",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc9abe0",
+   "id": "c570ee95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "420e5c77",
+   "id": "bf10a937",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8ace4c2",
+   "id": "ec639304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c333a704",
+   "id": "f3fc71e0",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fcce42",
+   "id": "efabf01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c48155",
+   "id": "44f3b521",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b9b6278",
+   "id": "27052140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c84b3e59",
+   "id": "aa4fc622",
    "metadata": {},
    "source": [
     "### Step 1b: Install CRDs (Optional - Instructor May Do This)\n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea7f5090",
+   "id": "36eeb099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca1b632f",
+   "id": "1529bf14",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e266fc0",
+   "id": "80d4fac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4db249",
+   "id": "812ef343",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c43a08b5",
+   "id": "dcdd8924",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65cee4ad",
+   "id": "20f72198",
    "metadata": {},
    "source": [
     "\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d281967",
+   "id": "ffc24471",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b96887",
+   "id": "3e1580ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e817cf",
+   "id": "db6a0c6b",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f03ab680",
+   "id": "310214f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fbbc1b7",
+   "id": "7943822b",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6324845a",
+   "id": "682e59d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062f5ca5",
+   "id": "ae03d39e",
    "metadata": {},
    "source": [
     "### Step 3b: Troubleshoot Pod Issues (If Pods Are Crashing)\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f35c70c7",
+   "id": "830c0004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be6ea8c",
+   "id": "dfd8776f",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364291e1",
+   "id": "704347e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ca76cd9",
+   "id": "965b3826",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0beff4f8",
+   "id": "b9cd7fbf",
    "metadata": {},
    "source": [
     "### Understanding Disaggregated Serving Trade-offs\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f2dfe2",
+   "id": "9c179e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd540f3",
+   "id": "970cceaa",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b424aaad",
+   "id": "68aa602b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3265b713",
+   "id": "9c983dff",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1604bccb",
+   "id": "e33a5f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb0277c",
+   "id": "4930c402",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b909536",
+   "id": "3ccf5757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2ac9e2",
+   "id": "86ce6e78",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876dade7",
+   "id": "e2b677b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02f7ebdd",
+   "id": "494d6016",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2d12ff",
+   "id": "0492c512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc76b33c",
+   "id": "9715191a",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1049,17 +1049,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120c00a5",
+   "id": "5460a3a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cd ~/dynamo-grove-brev/lab1 && ./run-benchmark.sh baseline"
+    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh baseline"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ce621e0",
+   "id": "21990861",
    "metadata": {},
    "source": [
     "This will run a low concurrency benchmark (1 concurrent request, 100 total requests) and display metrics including:\n",
@@ -1081,17 +1081,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65de3e90",
+   "id": "add11f26",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cd ~/dynamo-grove-brev/lab1 && ./run-benchmark.sh high"
+    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh high"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26e9824d",
+   "id": "0ea1a3af",
    "metadata": {},
    "source": [
     "This will run a high concurrency benchmark (4 concurrent requests, 200 total requests) to stress test the system and see how it handles multiple simultaneous users.\n",
@@ -1109,17 +1109,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c41d7e",
+   "id": "1c609129",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cd ~/dynamo-grove-brev/lab1 && ./run-benchmark.sh rate"
+    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh rate"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "41898cff",
+   "id": "b30bae6e",
    "metadata": {},
    "source": [
     "This will run a request rate benchmark (10 requests per second, 200 total requests) to simulate a steady stream of users hitting the API at a controlled rate.\n",
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34472bde",
+   "id": "4709cd92",
    "metadata": {},
    "source": [
     "### Cleanup\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "262e7fa7",
+   "id": "e94dafe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace47fd7",
+   "id": "92f15366",
    "metadata": {},
    "source": [
     "**Note:** Keep your namespace and platform for Lab 2! Only delete the deployment, not the namespace.\n",
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6191d5",
+   "id": "2c3c9e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb63dd55",
+   "id": "a5c9b136",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4db275a8",
+   "id": "3d69e4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15034448",
+   "id": "cc73f36b",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19049dad",
+   "id": "f3e0353b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e02b60e1",
+   "id": "dd7c541c",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdffe34d",
+   "id": "518bb464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df29e891",
+   "id": "90533b5f",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71dcb4f9",
+   "id": "7caf97c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f38f36af",
+   "id": "394cf320",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7192be",
+   "id": "ac2d529b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a2ab545",
+   "id": "34dcd98a",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e1b063",
+   "id": "5202498f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bc7255",
+   "id": "c0c54d20",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130e2232",
+   "id": "68b82bd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e44da7",
+   "id": "4d7e9629",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1547,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31eaf3b6",
+   "id": "45745a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0252a14c",
+   "id": "d0ba2413",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9005e8",
+   "id": "76a1f5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a513f814",
+   "id": "14a85915",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e9ed79",
+   "id": "5679bb7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "230d2cd5",
+   "id": "2e1f941b",
    "metadata": {},
    "source": [
     "### A7. Cleanup\n"
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3121b8bc",
+   "id": "0766ac25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038c9096",
+   "id": "8b0c7e58",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5a32b8",
+   "id": "ec036cae",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136b9155",
+   "id": "3f90995e",
    "metadata": {},
    "source": [
     "\n"
